--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
+    "GUILD_ID": "1226979436143050784",
     "SUGGESTION": "1231408768827265134",
     "CHANGE": "1232490099397230622",
     "VERIF_PERMISSION": "1236773845931921428",
